adding art, fleshing out summary items

--- a/newsletter/2024-02-18.md
+++ b/newsletter/2024-02-18.md
@@ -1,119 +1,56 @@
-# tktk
+# Bitcoiners strike back.
 ## #w3w: Feb. 11-17, 2024
 
-![]()
-*Photo by tktk*
+![Darth Vader](https://upload.wikimedia.org/wikipedia/commons/3/32/Star_Wars_-_Darth_Vader.jpg)
+*Photo by Bernie Thomas via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Star_Wars_-_Darth_Vader.jpg)*
 
-<!-- Lede item. Keep it to ~450 -->
+**Elizabeth Warren had a rough week** on multiple bitcoin-related fronts.
+
+First, some anonymous prankster finagled the senior U.S. senator from Massachusetts into signing paperwork to fly a flag over the U.S. capitol in honor of bitcoin creator Satoshi Nakamoto. Bitcoin Magazine broke the story, albeit with a little too much credulity that Warren, an ardent bitcoin foe, had experienced some surprising change of heart. <!-- Add link -->
+
+Then CoinDesk's TKTKTK sussed out [what really happened](). He reports:
+
+*TKTKTKTKTKTKTKTKTK*
+
+
+
+<!--
+
+Some related links and notes...
+
+- CoinDesk says flag dedication was due to a prank: https://www.coindesk.com/consensus-magazine/2024/02/16/what-the-warrensatoshi-flag-moment-means/ | https://www.coindesk.com/policy/2024/02/15/did-elizabeth-warren-just-endorse-bitcoin-not-so-fast/
+
+- Boston Globe story on Deaton exploring a run: https://www.bostonglobe.com/2024/02/14/metro/republican-lawyer-eyes-challenge-to-elizabeth-warren/
+
+- Politico coverage of Deaton. They say he's still a longshot: https://www.politico.com/news/2024/02/14/crypto-attorney-weighs-challenging-warren-00141585
+
+- Refer back to her statement on ETF approvals.
+
+- Bitcon Magazine broke the story on flag honoring Satoshi: https://crypto.news/elizabeth-warren-bitcoin-satoshi-nakamoto/
+
+-->
 
 # Week in Review
 
-Early, early drafts of summary items, curated with a big assist from Brave's AI Leo...
+- **Bitcoin leapt** to a [fresh 2-year high](https://www.coindesk.com/markets/2024/02/16/bitcoins-latest-rally-is-different-as-btc-rises-alongside-us-dollar-and-treasury-yields/) above $52,000 per coin. New investment in exchange-traded funds (ETFs) and anticipation of the upcoming network ["halving" event](https://www.cnn.com/2024/02/13/business/bitcoin-price-surge-halving/index.html) drove the price gains. Bitcoin is up 22% so far in 2024, with the latest rally pushing its market capitalization [above $1 trillion](https://www.cnbc.com/2024/02/14/bitcoin-btc-regains-1-trillion-market-cap-after-price-rise.html). The broader crypto market, comprising more than 2.2 million tokens, is now valued at $2 trillion globally, according to [CoinMarketCap data](https://coinmarketcap.com/charts/).
 
-- Elizabeth Warren, a frequent critic of Bitcoin, recently honored its creator, Satoshi Nakamoto, for the 15th anniversary of the digital currency. Warren recognized Nakamoto's creation of Bitcoin as a "financial system" and celebrated it as an "inclusive" one. This gesture marks a departure from Warren's previous stance on cryptocurrency, which has been skeptical. The recognition comes as Warren recently proposed legislation to address the challenges of digital currencies, particularly in regards to their misuse for illicit activities. The event was celebrated in New York City by Bitcoin Magazine and PubKey. https://crypto.news/elizabeth-warren-bitcoin-satoshi-nakamoto/
+- **ETF watch:** A new race is shaping up on Wall Street to list ETFs holding ether tokens, similar to the [11 bitcoin funds](https://www.msn.com/en-us/money/markets/a-glimpse-into-11-spot-bitcoin-etfs-set-for-launch-today/ar-AA1mOv9N) launched last month. Eight would-be issuers of ether ETFs have filed proposals with the Securities and Exchange Commission, with Franklin Templeton becoming the latest to [jump in the fray](https://finance.yahoo.com/news/franklin-templeton-files-spot-ethereum-225022386.html) on Monday. Meanwhile, Morningstar published [new research](https://www.morningstar.com/etfs/spot-bitcoin-etfs-trading-debut-6-charts) on bitcoin ETFs, including six charts that illustrate how the early competition among issuers is shaping up
 
-- Bitcoin has recently reached $50,000, driven by new investor enthusiasm and anticipation for the halving event, where the production rate is reduced. This event, taking place every four years, is a key concept in bitcoin's infrastructure and aims to control inflation while incentivizing miners. Historically, halvings have resulted in bullish price action, with a 30,000% increase after the 2012 halving. With the upcoming halving, investors expect more supply constraints and higher prices, but volatility is also anticipated. The timing is significant as it follows the recent approval of spot bitcoin ETFs, which have seen substantial net inflows. This newsletter's subscribers should be aware of the upcoming halving and its potential impact on the market. https://www.cnn.com/2024/02/13/business/bitcoin-price-surge-halving/index.html
+- **Coinbase is profitable again.** The trading platform reported better-than-expected quarterly results Thursday, pushing its shares higher on Wall Street. Coinbase swung to a profit of $273 million in the fourth quarter, compared to a loss of $557 million in the year-ago period. ([MarketWatch](https://www.marketwatch.com/story/coinbases-stock-soars-7-after-crypto-platform-swings-to-profit-34c10af7))
 
-- Michael Saylor, co-founder of MicroStrategy, announced that the company is rebranding as a bitcoin development firm. During a CNBC interview, Saylor stated that the recent listing of bitcoin ETFs has caused a surge in demand due to a large imbalance between supply and demand. He also mentioned that MicroStrategy will focus on accumulating bitcoin, promoting the growth of the Bitcoin network, and developing software to generate cash flow. This decision comes from the success of MicroStrategy's bitcoin strategy and its position as the world's largest public company holder of bitcoin. https://www.coindesk.com/markets/2024/02/13/michael-saylor-believes-demand-for-bitcoin-products-is-10x-the-supply/
+- **Michael Saylor**, co-founder of the tech consultancy MicroStrategy, said in an [interview with CNBC](https://www.youtube.com/watch?v=YYzHK-Ft1-g&pp=ygULc2F5bG9yIGNuYmM%3D) that his company will re-brand as a bitcoin development shop. Among public companies, MicroStrategy was an early adopter in using bitcoin as part of its corporate cash reserves. It now holds approximately $10 billion in BTC tokens. ([The Block](https://www.theblock.co/post/277633/microstrategys-bitcoin-is-worth-more-than-10-billion-as-cryptocurrency-nears-53000))
 
-- Bitcoin has surged to over two-year highs, pushing its market cap back over $1 trillion, as the success of U.S. spot bitcoin ETFs turns investor sentiment more positive. Increased demand for bitcoin, driven by newly launched U.S. spot bitcoin ETFs, has led to over $9.5 billion of new money entering the market since January. As a result, related stocks such as Coinbase, Microstrategy, Iris Energy, CleanSpark, Marathon Digital, and Riot Platform have also seen significant increases. Bitcoin's price rally and the upcoming halving event, which reduces supply while demand remains steady or increases, are expected to continue driving bitcoin's price growth in the coming months. https://www.cnbc.com/2024/02/14/bitcoin-btc-regains-1-trillion-market-cap-after-price-rise.html
+- **GoDaddy and Ethereum Name Service** are partnering to allow users to link their .eth domains to traditional domains for free. ([Cointelegraph](https://cointelegraph.com/news/godaddy-ens-dns-eth-free-pairing))
 
-- 6 new Bitcoin ETFs made their trading debut in January 2024, with IShares Bitcoin Trust ETF (IBIT) and Fidelity Wise Origin Bitcoin ETF (FBTC) being the frontrunners in asset gathering. The long-awaited arrival of these ETFs has sparked a fee war, with most issuers offering low-cost options. Liquidity for these ETFs has been strong, with over 1 billion shares traded in the first month. As of now, IBIT and FBTC offer the best combination of low fees and strong liquidity among the new launches. https://www.morningstar.com/etfs/spot-bitcoin-etfs-trading-debut-6-charts
+- **The decentralized finance platform Pendle** is nearing $1 billion in total value locked, a crypto-industry term for the amount of investor funds deposited. ([CoinDesk](https://www.coindesk.com/markets/2024/02/09/defi-platform-pendle-nears-1b-in-total-value-locked/))
 
-- Franklin Templeton has joined the race for a spot ethereum ETF, following the SEC's approval of bitcoin ETFs in January. The company's bitcoin ETF has $77 million in assets, while other providers have surpassed $100 million. The SEC is yet to approve or deny Grayscale Investments and BlackRock's ethereum ETF applications. Franklin Templeton, founded in 1947, is promoting its bitcoin ETF on Google ads, aiming to increase its assets in the crypto market. https://finance.yahoo.com/news/franklin-templeton-files-spot-ethereum-225022386.html
-
-- SEC Chair Gary Gensler has expressed caution regarding crypto, particularly Bitcoin, despite approving Bitcoin ETFs in January. Gensler cites the lack of oversight and potential for fraud in crypto markets, as well as Bitcoin's association with illicit activities, as concerns. He also highlighted the recent market collapses in the crypto space. However, Gensler emphasized that the agency is impartial and looks to ensure compliance with the law. The approval of Bitcoin ETFs was a reaction to a court ruling, rather than a change in stance on Bitcoin's risks. Gensler did not comment on Ethereum's eligibility for similar consideration. https://fortune.com/crypto/2024/02/14/gensler-ethereum-etfs-bitcoin-court-decision-against-sec/
-
-- SEC Chair Gary Gensler has expressed caution regarding crypto, particularly Bitcoin, despite approving Bitcoin ETFs in January. Gensler cites the lack of oversight and potential for fraud in crypto markets, as well as Bitcoin's association with illicit activities, as concerns. He also highlighted the recent market collapses in the crypto space. However, Gensler emphasized that the agency is impartial and looks to ensure compliance with the law. The approval of Bitcoin ETFs was a reaction to a court ruling, rather than a change in stance on Bitcoin's risks. Gensler did not comment on Ethereum's eligibility for similar consideration. https://fortune.com/crypto/2024/02/14/gensler-ethereum-etfs-bitcoin-court-decision-against-sec/
-
-- Bitcoin and Ethereum have reached new 2024 highs, with Bitcoin's market cap exceeding $1 trillion. This surge is attributed to a predicted supply shock and the recent revelation of PayPal founder Peter Thiel's $200 million investment in Bitcoin and Ethereum. Thiel, an early Bitcoin adopter, made significant returns in 2022 and is known for his libertarian views on the decline of geography-based governments in a digital economy. The market is now anticipating the impact of Bitcoin's upcoming halving event. https://www.forbes.com/sites/digital-assets/2024/02/14/bitcoin-price-suddenly-surges-to-fresh-2024-high-after-paypal-billionaires-huge-secret-bitcoin-and-ethereum-bet-revealed/
-
-- 2024 Elections: Crypto attorney John Deaton is considering challenging Senator Elizabeth Warren, a prominent crypto skeptic, in the Massachusetts Senate race. Deaton, a former U.S. Marine and asbestos victim advocate, has been consulting with former Massachusetts Governor Charlie Baker. While Warren remains popular and has a significant amount of funds, the cryptocurrency industry is ramping up efforts to influence the 2024 elections, with an industry-backed super PAC attacking Democratic candidate Katie Porter in California. Deaton has previously challenged Warren's crypto views on X, formerly Twitter, and helped fight an SEC lawsuit against Ripple Labs. https://www.politico.com/news/2024/02/14/crypto-attorney-weighs-challenging-warren-00141585
-
-- In a recent development, Genesis received court approval to sell $1.6 billion in crypto trust shares. Nvidia, the world's leading AI chipmaker, revealed stakes in smaller AI firms, causing their shares to rise. Meanwhile, Intuitive Machines launched a moon lander from Florida, aiming for the first U.S. lunar landing in over 50 years. In other news, Meta Platforms announced a 30% service charge for businesses boosting posts on iOS versions of Facebook and Instagram. Cisco Systems will cut 5% of its workforce and lower its revenue target due to the tough economy. Google will offer an auto-updating Chrome OS version to Windows devices, potentially preventing millions of PCs from ending up in landfills. Lastly, Renesas Electronics agreed to buy electronics design firm Altium for $5.9 billion. https://www.reuters.com/technology/genesis-gets-court-approval-sell-16-bln-crypto-trust-shares-2024-02-14/
-
-- According to recent stock market news, the Dow and S&P 500 are on the rise, while the Nasdaq Composite experiences a slight decrease. Of particular interest, Coinbase Global's earnings report is due today, with momentum favoring the crypto platform. Stay updated for more information on this development. https://www.barrons.com/livecoverage/stock-market-today-021524/card/coinbase-global-earnings-are-today-momentum-is-in-the-crypto-platform-s-favor--zfmVVhlPrYVHZqFrZC0B
-
-- Ledger and Coinbase have collaborated to simplify the process of purchasing and transferring crypto assets from Coinbase to Ledger devices. The integration of Coinbase Pay into Ledger Live allows users to transfer existing crypto holdings and transact directly from their desktop or mobile devices, with purchased crypto sent directly to their Ledger devices. This move aims to make the process of transferring crypto from exchanges to self-custody wallets less cumbersome, as Ledger hopes to attract new users to the crypto space with the recent launch of Bitcoin ETFs. https://cointelegraph.com/news/ledger-live-coinbase-pay-integration-self-custody
-
-- The cryptocurrency market has reached a milestone, with the total cap surpassing $2 trillion for the first time since April 2022. This increase is attributed to the anticipation of easing monetary policy and interest in spot bitcoin ETFs and the upcoming bitcoin halving event. Bitcoin has experienced a 21% rise so far this year, reaching $51,620, while ether has climbed to $2,740. The surge in demand for spot bitcoin ETFs has resulted in significant inflows, with MicroStrategy's Michael Saylor predicting strong gains for bitcoin holders as previous halving events have been followed by all-time highs. https://markets.businessinsider.com/news/currencies/bitcoin-price-outlook-crypto-market-cap-trillion-eth-investors-etf-2024-2
-
-- 2023 was a year of growth for the crypto industry, with Bitcoin's price skyrocketing and total market capitalization reaching $1.8 trillion. As the industry moves forward from past controversies, companies like Chainalysis, Fireblocks, and Gauntlet are leading the way in regulatory compliance, security, and optimization of economic models. Chainalysis, now with 300 public sector customers, uses on-chain data to trace crypto transactions and identify illegal activity. Fireblocks, with $1 billion in funding, helps investors and institutions hold cryptocurrencies securely and tokenizes traditional finance assets. Gauntlet, valued at $1 billion, assists decentralized finance exchanges in managing risk and optimizing profitability. These companies are helping the industry build sustainable growth and navigate regulatory scrutiny.
-https://www.forbes.com/sites/javierpaz/2024/02/13/the-future-of-crypto-and-blockchain-fintech-50-2024/
-
-- Coinbase has proposed using blockchain technology to make pennies "useful" again, citing the annual loss of $1.2 million worth of pennies and the high cost of manufacturing them. The crypto exchange aims to move the U.S. dollar to a well-designed blockchain, which could benefit merchants with instant settlement and low-cost payments. However, technical and logistical limitations still exist in moving finance online. Meanwhile, Bitcoin surged above $50,000, with favorable macro conditions and the upcoming halving acting as bullish catalysts. Institutional demand for Bitcoin is high, and spot Bitcoin ETFs have attracted significant inflows, while retail interest remains low. https://cointelegraph.com/news/coinbase-latest-ad-argues-blockchain-could-make-pennies-useful-again
-
-- Citigroup has successfully completed a blockchain equity tokenization trial, in collaboration with Wellington Management and WisdomTree. The trial demonstrated the feasibility of issuing and managing tokenized private equity funds for clients within a regulated framework, while being compatible with the bank's current systems. Meanwhile, Solana and Binance Coin are showing strength, trading above $108 and $327 respectively, as the crypto market continues to attract interest from banking institutions. Kelexo, a lending platform, is currently conducting its presale, with KLXO trading at $0.022. The platform aims to simplify the lending process and make it more accessible. https://crypto.news/citigroup-succeeds-in-blockchain-equity-tokenization-trial/
-
-- The networks Klaytn and Finschia have approved a proposal to merge, creating a large web3 ecosystem in Asia. The new foundation will be based in Abu Dhabi and led jointly by Klaytn and Finschia. The merger will introduce a new native token, and $384 million worth of existing tokens will be burned. Additionally, the networks plan to launch a native stablecoin and establish major-scale DeFi and blockchain infrastructure. https://www.theblock.co/post/277595/klaytn-finschia-merger
-
-- Telefónica has partnered with Chainlink Labs to strengthen Web3 security through the GSMA Open Gateway, utilizing Chainlink Functions for securely connecting APIs to Polygon's PoS blockchain network. This collaboration introduces an additional layer of security to blockchain transactions, verifying data from various sources and ensuring that a device's SIM card has not undergone any unauthorized changes. Telefónica and Chainlink are empowering Web3 developers by enhancing the ecosystem with greater connectivity, new intelligent layers of authentication, and verification through standardized Telco APIs and Chainlink Functions. https://www.telefonica.com/en/communication-room/press-room/telefonica-integrates-chainlink-to-strengthen-web3-security-with/
-
-- The relationship between Bitcoin and Wall Street is warming up, with more financial institutions showing interest in Bitcoin ETFs. The performance of Bitcoin spot ETFs has been historic, with BlackRock, Fidelity, and Ark Invest's 21Shares accumulating over $1 billion in assets. VanEck's Bitcoin ETF, which has around $175.7 million in assets, is also seeing strong demand. According to Mathew Sigel, Head of Digital Assets Research at VanEck, the ETF's entry has been a 'smashing success' due to the record-breaking inflows. https://decrypt.co/217703/big-bank-bitcoin-etf-vaneck-blackrock
-
-- GoDaddy and Ethereum Name Service have partnered to allow users to link their .eth domains to traditional domains for free, simplifying the process of connecting Web3 identities to Web2 domains. This partnership eliminates previous barriers of high gas fees and aims to benefit both Web2 and Web3 ecosystems. In November 2023, ENS developers disputed an Unstoppable Domains patent, claiming it was based on ENS's own innovations. https://cointelegraph.com/news/godaddy-ens-dns-eth-free-pairing
-
-- 2023 saw a significant drop in Web3 funding, with a 74% year-on-year decrease. However, the crypto market shows a more optimistic outlook in 2024, with increased interest in digital assets and AI. Investors are becoming more rational, focusing on areas like decentralized infrastructure, AI, and DeSci, while being cautious about volatility and returns. Notable success stories include Sygnum, Kiln, and Coinvesting, which operate with a co-investment strategy. The trend of fresh innovation and decentralization continues in 2024, with projects like Pyth Network and Subsquid gaining traction. https://www.forbes.com/sites/lawrencewintermeyer/2024/02/15/investors-remain-cautious-as-clouds-clear-over-the-web3-investment-landscape/
-
-- Solana has been surging and if you're looking to earn more SOL, playing Solana-based games can be a great option. Games like Ev.io, a web-based FPS that lets you earn SOL, and Stepn, which rewards you with GST for exercising, are some of the notable play-to-earn games on Solana. Additionally, games like Aurory and MixMob offer opportunities to earn AURY and MXM tokens, respectively, by participating in their gaming ecosystems. https://decrypt.co/207766/solana-soaring-earn-more-playing-these-games
-
-- The Bitcoin Ordinals gaming project, Bits, recently announced a price reduction and supply cut after a lukewarm start. The project, incubated by DFZ Labs, aims to bring together gamers, creators, and Ordinals enthusiasts into a collaborative framework. With the new changes, the cost of minting a Bits inscription has been reduced to 0.002 BTC and the supply will be cut to 3,000 inscriptions. Collectors who minted a Bits inscription for more than the current 0.002 BTC price will be refunded the difference. https://decrypt.co/217598/bitcoin-ordinals-gaming-project-bits-slashes-price-supply-after-misjudging-market
-
-- MicroStrategy's bitcoin holdings are now worth over $10 billion, as the cryptocurrency's price surged to nearly $53,000. The company recently added 850 bitcoins to its existing holdings, which currently stand at 190,000 bitcoins. This news is particularly significant as the price of bitcoin has been fluctuating due to the launch of several spot bitcoin ETFs by traditional financial institutions. https://www.theblock.co/post/277633/microstrategys-bitcoin-is-worth-more-than-10-billion-as-cryptocurrency-nears-53000
-
-- Many tech workers at a coworking space focused on Solana blockchain development have purchased Apple's expensive new VR headset, the Vision Pro. Over 20 people at the mtnDAO event in Salt Lake City now own the headset, which costs around $5,000. They spend their days immersed in virtual workspaces, likely fueled by recent crypto wealth from projects like Solana and airdrops of new tokens. https://www.coindesk.com/culture/2023/02/15/apple-vision-pros-are-practically-dress-code-at-this-crypto-hacker-house
-
-- In Q4 2023, the FCA issued 450 alerts targeting illegal crypto promotions in the UK, contributing to over 10,000 financial adverts and promotions withdrawn or amended that year. The FCA's financial promotion rules for cryptoassets went live on Oct 8, 2023, with non-compliant memes potentially leading to criminal offenses. The FCA emphasizes clear, fair, and non-misleading financial promotions, and has expressed concerns about influencers promoting financial products. https://www.theblock.co/post/277631/fca-issues-450-alerts-against-illegal-crypto-promotions-in-2023
-
-- JPMorgan suggests that US regulators can exert control over Tether, a stablecoin issuer, through the Office of Foreign Assets Control (OFAC). This follows OFAC's sanctioning of Tornado Cash, a privacy tool on the Ethereum network, which Tether had previously refused to bar. Tether later froze its stablecoins held in crypto wallets sanctioned by OFAC. JPMorgan's concerns about Tether's concentration in crypto markets may be driven by the bank's own fines totaling $39 billion. https://www.theblock.co/post/277655/jpmorgan-tether-ofac-comments
-
-- In Japan, Bitcoin has hit a new high against the yen as the currency weakens due to money printing. This is driving gains for cryptocurrencies over fiat in Japan, as seen in recent data. https://www.coindesk.com/markets/2024/02/15/bitcoin-hits-record-high-in-yen-terms-reflecting-stress-on-japans-fiat-currency/
-
-- The US House of Representatives is currently negotiating the reauthorization of Section 702, a controversial foreign surveillance program. A bipartisan coalition supports pro-privacy reforms, including new warrant requirements for obtaining commercially available data. The main point of contention is whether warrants should be required for accessing US calls, texts, and emails intercepted by US spies. There is concern that popular pro-privacy amendments may be killed in backroom deals, as has happened in the past. ([Wired](https://www.wired.com/story/section-702-reform-backroom-deal/?mbid=social_linkedin))
-
-- Despite the fact that more and more people are listening to music and podcasts, the audio industry is facing job cuts and cost-cutting measures due to a slower ad market and the potential impacts of artificial intelligence. The television industry is facing similar challenges. However, music catalog sales are still attracting investor interest. And, in case you missed it, Super Bowl LVIII was the most-watched television event in U.S. history. ([Axios](https://www.axios.com/2024/02/12/audio-industry-shrinks-despite-streaming-gains))
+- **A U.S. bankcruptcy court approved** Genesis Global's proposal to sell $1.6 billion in Grayscale cryptocurrency trust shares as part of its effort to repay creditors. ([Reuters](https://www.reuters.com/technology/genesis-gets-court-approval-sell-16-bln-crypto-trust-shares-2024-02-14/))
 
 # Odds & Ends
 
-<!-- These urls items need summarizing and/or fleshing out... -->
+- **Music labels, streaming services, and other audio companies** are cutting costs and employee headcount despite rising listnership in the U.S. ([Axios](https://www.axios.com/2024/02/12/audio-industry-shrinks-despite-streaming-gains))
 
-- Coinbase earnings Thursday evening. <!-- Need link -->
-
-- Unchained podcast episode on overlap of crypto and AI <!-- Need link -->
-
-https://www.theblock.co/post/277633/microstrategys-bitcoin-is-worth-more-than-10-billion-as-cryptocurrency-nears-53000
-
-https://silverbackconsulting.us/7-mistakes-youre-making-while-working-from-home-cybersecurity-edition/
-
-https://www.bbc.com/future/article/20240123-the-race-to-build-climate-resilient-coral-reefs
-
-https://harlem.capital/unicorns-of-unicorns-a-look-at-the-38-black-and-latino-founded-unicorns/
-
-https://fortune.com/crypto/2024/02/09/driving-current-crypto-boom-intergenerational-revenge/
-
-https://www.coindesk.com/consensus-magazine/2023/12/22/2024-the-revenge-of-bitcoin/
-
-https://www.coindesk.com/consensus-magazine/2023/12/20/blockchain-tech-predictions-for-2024-from-experts-at-ripple-coinbase-a16z-starknet/
-
-https://www.coindesk.com/consensus-magazine/2023/12/19/how-asia-drives-the-next-crypto-bull-market/
-
-https://www.coindesk.com/consensus-magazine/2024/01/31/chris-dixon-talks-techno-optimism-permissionless-innovation-and-the-need-for-crypto/
-
-https://www.coindesk.com/markets/2024/02/09/defi-platform-pendle-nears-1b-in-total-value-locked/
-
-https://www.coindesk.com/policy/2024/02/09/new-york-expands-fraud-case-against-digital-currency-group-to-3-billion/
-
-https://www.coindesk.com/consensus-magazine/2023/12/22/the-unified-future-of-ai-blockchain-and-virtual-worlds-in-2024/
-
-https://www.theguardian.com/technology/2024/feb/07/hyperverse-cryptocurrency-scam-impact-australians-class-action-lawsuit-ceo
-
-https://www.404media.co/woman-got-cremation-ads-in-the-mail-after-getting-chemotherapy/
-
-https://www.wsj.com/health/wellness/early-sleep-bedtime-6ecd1d67?st=s36a1jmdhnvmhvu&reflink=desktopwebshare_permalink
-
-https://www.coindesk.com/policy/2024/02/09/uks-planned-stablecoin-rules-need-reworking-crypto-advocates-say/
-
-https://www.coindesk.com/markets/2024/02/09/bitcoin-tops-47k-as-spot-bitcoin-etfs-book-one-of-their-best-days/
+- **A race is on** to build coral reefs that are resistant to climate change. ([BBC](https://www.bbc.com/future/article/20240123-the-race-to-build-climate-resilient-coral-reefs))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
