--- a/newsletter/2024-02-25.md
+++ b/newsletter/2024-02-25.md
@@ -45,7 +45,7 @@ Lede item. Stick to ~450 words. Some possibilities...
 
 - **Crypto attorney John Deaton** announced he's running for U.S. senate against incumbent Elizabeth Warren, a vocal critic of the industry. He faces long odds against the popular Massachusetts Democrat. ([Boston Globe](https://www.msn.com/en-us/news/politics/john-deaton-crypto-attorney-and-commentator-launches-republican-bid-against-elizabeth-warren/ar-BB1izUnB)) <!-- Additional coverage from Bitcoinist: https://bitcoinist.com/pro-xrp-lawyer-enters-senate-race/ -->
 
-- **Hong Kong's legislative council** will soon consider new legislation to regulate stablecoins and over-the-counter trading of digital assets.([CoinDesk](https://www.coindesk.com/policy/2024/02/21/hong-kong-doubles-down-on-stablecoin-otc-rules-promise/))
+- **Hong Kong's legislative council** will soon consider new legislation to regulate stablecoins and over-the-counter trading of digital assets. ([CoinDesk](https://www.coindesk.com/policy/2024/02/21/hong-kong-doubles-down-on-stablecoin-otc-rules-promise/))
 
 - **Walmart said** it is expanding availability of Pudgy Penguins toys linked to an Ethereum-based interactive platform. ([The Block](https://www.theblock.co/post/278347/walmart-pudgy-penguins-expansion))
 
@@ -53,8 +53,7 @@ Lede item. Stick to ~450 words. Some possibilities...
 
 # Odds & Ends
 
-- <!-- Draft: The Statewide News Collective, a community of practice for independent news organizations, has launched an impact research project with Montana Free Press, New Hampshire Public Radio, and Bridge Michigan. Led by George Washington University professor Danny Hayes, the project will measure the community and civic benefits of statewide accountability newsrooms. Each organization will receive an $8,000 grant for their participation and a detailed report on the impact of their work. The research aims to better understand the broader community and civic benefits of statewide journalism and create a publicly available resource for other organizations.
- https://www.lenfestinstitute.org/institute-news/statewide-news-collective-launches-impact-research-project/ -->
+- tk <!-- Draft: The Statewide News Collective, a community of practice for independent news organizations, has launched an impact research project with Montana Free Press, New Hampshire Public Radio, and Bridge Michigan. Led by George Washington University professor Danny Hayes, the project will measure the community and civic benefits of statewide accountability newsrooms. Each organization will receive an $8,000 grant for their participation and a detailed report on the impact of their work. The research aims to better understand the broader community and civic benefits of statewide journalism and create a publicly available resource for other organizations. --> [tk](https://www.lenfestinstitute.org/institute-news/statewide-news-collective-launches-impact-research-project/)  
 
 - **The population of Monarch butterflies** along California's coast is [down 95%](https://xerces.org/blog/western-monarch-count-tallies-233394-butterflies) compared to 1980s, acording to a year-end count by the Xerces Society, a conservation nonprofit.
 
